fix: change translations

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -155,55 +155,55 @@
 
       "info_title": "Какую информацию Вам нужно предоставить",
       "info_description": "В услугу доставки (кроме курьерской) не входит разгрузка (выгрузка из автомобиля), подъем и пронос товара — это отдельные услуги.",
-      "info_list": [
-        "Укажите, есть ли лифт.",
-        "Если да, то уточните — пассажирский или грузовой.",
-        "Если лифт отсутствует, то заказ поднимается вручную (его стоимость рассчитывается заранее).",
-        "Сообщите заранее об особенностях места разгрузки (технический этаж, наличие освещения, доступность и т.д.).",
-        "Разгрузка не осуществляется, если нарушены правила безопасности и есть угроза жизни и здоровью сотрудников компании."
-      ],
+      "info_list": {
+        "elevator_presence": "Укажите, есть ли лифт.",
+        "elevator_type": "Если да, то уточните — пассажирский или грузовой.",
+        "manual_lifting": "Если лифт отсутствует, то заказ поднимается вручную (его стоимость рассчитывается заранее).",
+        "unloading_details": "Сообщите заранее об особенностях места разгрузки (технический этаж, наличие освещения, доступность и т.д.).",
+        "safety_rules": "Разгрузка не осуществляется, если нарушены правила безопасности и есть угроза жизни и здоровью сотрудников компании."
+      },
 
       "cost_title": "Стоимость разгрузки и подъёма",
       "cost_description": "Рассчитывается, исходя из категории товара, веса, размеров и способа подъема (вручную или на лифте). Мы рассчитаем ее при оформлении заказа на сайте или по телефону. Если нам не удалось сделать это при оформлении, с вами свяжется оператор и сообщит стоимость подъема.",
-      "cost_list": [
-        "Стоимость разгрузки в подвал или на цокольный этаж равна стоимости подъема вручную на второй этаж.",
-        "В доставку на мопедах входит стоимость подъема.",
-        "Если на месте потребовалась доплата, то чек будет отправлен на Вашу электронную почту."
-      ],
+      "cost_list": {
+        "basement_cost": "Стоимость разгрузки в подвал или на цокольный этаж равна стоимости подъема вручную на второй этаж.",
+        "moped_delivery": "В доставку на мопедах входит стоимость подъема.",
+        "additional_payment": "Если на месте потребовалась доплата, то чек будет отправлен на Вашу электронную почту."
+      },
 
       "safety_title": "Принцип безопасности оказания услуг - приоритетный",
       "safety_description": "Бригада подъема соблюдает правила техники безопасности и НЕ ВЫПОЛНЯЕТ работы, если требуется:",
-      "safety_list": [
-        "Выход на крышу.",
-        "Проход в шахту лифта.",
-        "Работа в непосредственной близости к оголенным электропроводам.",
-        "Работа в условиях повышенной задымленности, загазованности, запыленности.",
-        "Подъем товара по пожарной или приставной лестнице.",
-        "Подъем товара по строительным лесам.",
-        "Подача товаров в окна, чердаки, подвалы, через ограждения и преграды.",
-        "Работа в помещениях высотой ниже 180 см.",
-        "Пронос и подъем товара по временным сооружениям и через инженерные коммуникации.",
-        "Подъем товара по лестнице без перил.",
-        "Подъем товара в условиях недостаточной освещенности."
-      ],
+      "safety_list": {
+        "roof_access": "Выход на крышу.",
+        "elevator_shaft": "Проход в шахту лифта.",
+        "electric_hazard": "Работа в непосредственной близости к оголенным электропроводам.",
+        "toxic_environment": "Работа в условиях повышенной задымленности, загазованности, запыленности.",
+        "fire_escape": "Подъем товара по пожарной или приставной лестнице.",
+        "scaffolding": "Подъем товара по строительным лесам.",
+        "window_lifting": "Подача товаров в окна, чердаки, подвалы, через ограждения и преграды.",
+        "low_ceiling": "Работа в помещениях высотой ниже 180 см.",
+        "temporary_structures": "Пронос и подъем товара по временным сооружениям и через инженерные коммуникации.",
+        "no_railings": "Подъем товара по лестнице без перил.",
+        "poor_lighting": "Подъем товара в условиях недостаточной освещенности."
+      },
 
       "guarantee_title": "При подъёме гарантируем:",
-      "guarantee_list": [
-        "Сохранить потребительские свойства товара.",
-        "При необходимости произвести сухую уборку и оставить лестницу или лифт чистой."
-      ],
+      "guarantee_list": {
+        "product_safety": "Сохранить потребительские свойства товара.",
+        "clean_environment": "При необходимости произвести сухую уборку и оставить лестницу или лифт чистой."
+      },
 
       "tariff_title": "Тарифы на подъем и разгрузочные работы",
       "tariff_manual": "Рукой",
-      "tariff_manual_list": [
-        "1 мешок или ведро 50 драм/налог",
-        "Гипсокартон 1 шт - 300 драм/налог"
-      ],
+      "tariff_manual_list": {
+        "bag_bucket": "1 мешок или ведро 50 драм/налог",
+        "drywall": "Гипсокартон 1 шт - 300 драм/налог"
+      },
       "tariff_elevator": "На лифте",
-      "tariff_elevator_list": [
-        "1 мешок или ведро 100 драм",
-        "Гипсокартон 1 шт - 150 драм/налог"
-      ]
+      "tariff_elevator_list": {
+        "bag_bucket": "1 мешок или ведро 100 драм",
+        "drywall": "Гипсокартон 1 шт - 150 драм/налог"
+      }
     }
   },
   "regular_customer": {
@@ -278,78 +278,45 @@
       },
       "benefits_of_working": {
         "title": "Преимущества работы с нами",
-        "cards": [
-          {
-            "id": "1",
-            "title": "Обслуживание",
-            "image": "/images/for-business/image1.jpg",
-            "values": [
-              "Профессиональная консультация и ответственное отношение",
-              "Самая большая онлайн-платформа - более 10 000 наименований продукции",
-              "Предоставление услуг квалифицированных мастеров",
-              "Доставка от двери до двери"
-            ]
-          },
-          {
-            "id": "2",
-            "title": "Доступные цены",
-            "image": "/images/for-business/image2.jpg",
-            "values": [
-              "Конкурентные цены",
-              "Гибкая система рассрочки",
-              "Возможность предложения своей цены на конкретный товар",
-              "Возможность вычета НДС",
-              "Сотрудничество с клиентами без посредников",
-              "Сокращение незапланированных расходов"
-            ]
-          },
-          {
-            "id": "3",
-            "title": "Подход",
-            "image": "/images/for-business/image3.jpg",
-            "values": [
-              "Учитываем все желания и потребности клиента",
-              "Отслеживание истории заказов в личном кабинете",
-              "Возможность сделать свой выбор, не покидая рабочего места",
-              "Сопровождение и внимание на любом этапе",
-              "Экономия времени и ресурсов"
-            ]
-          },
-          {
-            "id": "4",
-            "title": "Множество преимуществ с Domix",
-            "image": "/images/for-business/image4.jpg",
-            "values": [
-              "Гибкая система оплаты",
-              "Общие пакеты и предложения",
-              "Корпоративный клиент",
-              "Гибкая система постоплаты и возможность вычета НДС",
-              "Личная страница с историей покупок",
-              "Опытные и надежные мастера"
-            ]
-          }
-        ]
+        "service": {
+          "title": "Обслуживание",
+          "value_1": "Профессиональная консультация и ответственное отношение",
+          "value_2": "Самая большая онлайн-платформа - более 10 000 наименований продукции",
+          "value_3": "Предоставление услуг квалифицированных мастеров",
+          "value_4": "Доставка от двери до двери"
+        },
+        "pricing": {
+          "title": "Доступные цены",
+          "value_1": "Конкурентные цены",
+          "value_2": "Гибкая система рассрочки",
+          "value_3": "Возможность предложения своей цены на конкретный товар",
+          "value_4": "Возможность вычета НДС",
+          "value_5": "Сотрудничество с клиентами без посредников",
+          "value_6": "Сокращение незапланированных расходов"
+        },
+        "approach": {
+          "title": "Подход",
+          "value_1": "Учитываем все желания и потребности клиента",
+          "value_2": "Отслеживание истории заказов в личном кабинете",
+          "value_3": "Возможность сделать свой выбор, не покидая рабочего места",
+          "value_4": "Сопровождение и внимание на любом этапе"
+        },
+        "advantages": {
+          "title": "Множество преимуществ с Domix",
+          "value_1": "Гибкая система оплаты",
+          "value_2": "Общие пакеты и предложения",
+          "value_3": "Корпоративный клиент",
+          "value_4": "Гибкая система постоплаты и возможность вычета НДС",
+          "value_5": "Личная страница с историей покупок",
+          "value_6": "Опытные и надежные мастера"
+        }
       },
       "work_process": {
         "title": "Наш процесс работы",
-        "cards": [
-          {
-            "id": "1",
-            "title": "Получение коммерческого предложения/прием заказа"
-          },
-          {
-            "id": "2",
-            "title": "Оформление заказа, подтверждение"
-          },
-          {
-            "id": "3",
-            "title": "Выставление счета/оплата"
-          },
-          {
-            "id": "4",
-            "title": "Отгрузка товара/доставка"
-          }
-        ]
+        "step_1": "Получение коммерческого предложения/прием заказа",
+        "step_2": "Оформление заказа, подтверждение",
+        "step_3": "Выставление счета/оплата",
+        "step_4": "Отгрузка товара/доставка"
       },
       "services": {
         "title": "Сервисы",
@@ -459,8 +426,7 @@
       "advantage7_title": "Консультация специалистов",
       "advantage7_value": "Наши специалисты помогут вам выбрать нужный вам товар, а так же оптимизируют ваши расходы по приобретению."
     },
-    "banner": "В каталог",
-    "latest_company_promotions": {}
+    "banner": "В каталог"
   },
   "error": {
     "title": "Страница не найдена",
