--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -61,7 +61,7 @@
       "newest": "Новинки"
     },
     "latest_company_promotions": {
-      "title": "Последне акции компании",
+      "title": "Последнии акции компании",
       "mobile_button": "Все акции"
     },
     "contacts": {
