feat: add translates and ssr

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -95,8 +95,8 @@
         "post_delivery_details": "Ай пост",
         "location": "Место",
         "city": "Город",
-        "yerevan": "Ереван",
-        "all_regions": "все регионы",
+        "yerevan": "г.Ереван",
+        "all_regions": "Все регионы",
         "time": "Время",
         "same_day": "день в день",
         "within_2_4_hours": "в течение 2-4 часов",
@@ -124,15 +124,20 @@
         "column3": "цена",
         "row1": {
           "name": "1 мешок",
-          "size": "25-50 кг",
+          "size": "25-30 кг",
           "price": "100 драм/ этаж"
         },
         "row2": {
+          "name": "1 мешок",
+          "size": "45-50 кг",
+          "price": "200 драм/ этаж"
+        },
+        "row3": {
           "name": "Гипсокартон",
           "size": "1200x2400 мм",
           "price": "150 драм/ этаж"
         },
-        "row3": {
+        "row4": {
           "name": "Профили",
           "size": "20 штук",
           "price": "150 драм/ этаж"
@@ -524,6 +529,75 @@
     },
     "gift_cards": {
       "title": "Подарочные карты"
+    }
+  },
+  "cart": {
+    "title": "Корзина",
+    "product": "Товар",
+    "price": "Цена",
+    "quantity": "Количество",
+    "sum": "Сумма",
+    "clearCart": "Очистить корзину",
+    "discount": "Скидка",
+    "total": "Итого",
+    "continue": "Продолжить",
+    "requestDiscount": "Запросить скидку",
+    "yourOrder": "Ваш заказ",
+    "individual": "Физическое лицо",
+    "entity": "Юридическое лицо"
+  },
+  "payment": {
+    "title": "Оплата",
+    "price": "Цена",
+    "delivery": "Доставка",
+    "total": "Сумма",
+    "orderButton": "Заказать",
+    "individual": "Физическое лицо",
+    "entity": "Юридическое лицо",
+    "payer_details": {
+      "title": "Данные плательщика",
+      "payer_type": "Тип плательщика",
+      "first_name": "Имя",
+      "last_name": "Фамилия",
+      "email": "Электронный адрес",
+      "phone": "Телефон",
+      "tin": "ИНН"
+    },
+    "payment_method": {
+      "title": "Способ оплаты:"
+    },
+    "purchase_method": {
+      "title": "Способ покупки",
+      "address": "Адрес:",
+      "add_address_button": "Добавить адрес",
+      "delivery_method": {
+        "title": "Способ доставки:",
+        "details_button": "Подробнее о доставке"
+      },
+      "standard": {
+        "title": "Стандартная доставка",
+        "description": "до 2 дней (не распространяется на цемент и гипсокартон)",
+        "price": "Бесплатно"
+      },
+      "express": {
+        "title": "Экспресс доставка",
+        "description": "день в день (в течение 2-4 часов)",
+        "price": "от 2000 драм"
+      },
+      "moped": {
+        "title": "Курьер Мопед (до 10 кг)",
+        "description": "день в день (в течение 2 часов)",
+        "price": "1500 драм"
+      },
+      "aipost": {
+        "title": "Айпост Доставка (вес до 5 кг)",
+        "description": "до 3 дней",
+        "price": "700 драм"
+      }
+    },
+    "additional_services": {
+      "title": "Дополнительные услуги",
+      "description": "Стоимость дополнительных услуг уточнит оператор."
     }
   }
 }
