--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -553,7 +553,8 @@
       "submit_button": "Запросить скидку",
       "cancel_button": "Отменить",
       "my_suggested_price": "Моя предложенная цена (общая сумма)",
-      "quantity": "Количество(шт)",
+      "quantity": "Количество (шт)",
+      "product": "Товар",
       "request_discount_toast": "Спасибо за вашу заявку",
       "request_discount_desctiption": "Скоро с вами свяжется наш менеджер",
       "request_discount_error": "Не получили вашу завку...",
@@ -634,5 +635,19 @@
     "phone_placeholder": "Телефон",
     "agreement_text": "Согласие на обработку персональных данных",
     "submit_button": "Отправить"
+  },
+  "breadcrumbs": {
+    "home": "Главная",
+    "about": "О нас",
+    "contacts": "Контакты",
+    "delivery_and_payment": "Доставка и оплата",
+    "regular_customer": "Постоянный клиент",
+    "shares": "Акции",
+    "for_business": "Для бизнеса",
+    "vacancies": "Вакансии",
+    "profile": "Профиль",
+    "cart": "Корзина",
+    "payment": "Оплата",
+    "catalog": "Каталог"
   }
 }
