fix: change offer price request and text in regular customer

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -234,27 +234,22 @@
       "gift_cards": "Հավաստագրեր"
     },
     "info_regular_customer": {
-      "discount_system_title": "Domix-ի զեղչերի կուտակման համակարգ",
-      "delivery_excludes_unloading": "Առաքման ծառայությունը (կամ բացի մոպեդից) չի ներառում բեռների վերբեռնումը (ավտոմեքենայից բեռների տեղափոխումը), բեռի բարձրացումը և տեղափոխումը առանձին ծառայություններ են։",
-      "delivery_confirmation_required": "Առաքումը կատարվում է միայն ապրանքի ընդունման պատրաստակամության հաստատումից հետո։ Առաքման օրը, խնդրում ենք կապվել պատվերի մեջ նշված հեռախոսահամարի հետ։",
-      "express_delivery_no_confirmation": "Եթե դուք ընտրել եք «Էքսպրես» առաքումը, մեքենան կժամանի հասցեին նույնիսկ առանց պատվերի նախնական հաստատման հեռախոսով։",
-      "change_delivery_time": "Դուք կարող եք փոխել առաքման ժամը կամ կարգավորել պատվերը՝ կապվելով 012440440 հեռախոսահամարով։",
-      "unloading_rules": "Եթե բեռնաթափման վայրը դժվարությամբ հասանելի է, մեքենան կկանգնի ամենահամապատասխան վայրում՝ չխախտելով ճանապարհատրանսպորտային կանոնները և բացառելով տրանսպորտի վնասումը։ 1,8 տոննա քաշով ավտոմեքենայի բեռնաթափման համար նախատեսված է 30 րոպե, 1,8 տոննայից ավելի՝ 60 րոպե։",
-      "payment_options": "Առաքման համար կարող եք նախօրոք վճարել ցանկացած հարմար եղանակով (կայքում, հեռախոսով), ինչպես նաև տեղում՝ կանխիկ կամ բանկային քարտով, մինչև բեռի բարձրացումը սկսվի։",
-      "customer_support": "Եթե դուք ունեք հարցեր՝ կապված ապրանքի որակի կամ քանակի հետ, կարող եք դիմել ընկերության ներկայացուցիչին տեղում կամ Հաճախորդների սպասարկման ծառայությանը՝ 012440440 հեռախոսահամարով։ Հեռախոսահամարը նշված է նաև ապրանքի հաշվի մեջ։",
-      "purchase_amount": "Գնումների գումար",
-      "future_purchases": "Հաջորդ գնումներ",
-      "delivery": "Առաքում",
-      "loader_services": "Բեռնակառավարման ծառայություններ",
-      "range_0_1m": "0-ից 1 մլն դրամ",
-      "range_1_3m": "1-ից 3 մլն դրամ",
-      "above_3m": "3 մլն դրամ",
-      "discount_3": "3% զեղչ",
-      "discount_5": "5% զեղչ",
-      "discount_10": "10% զեղչ",
-      "delivery_free": "հետ免费",
-      "loader_free": "հետ免费",
-      "no_discount": "-"
+      "title": "Կուտակային զեղչային համակարգ և անվճար առաքում",
+      "subtitle": "Մենք գնահատում ենք մեր հաճախորդներին և առաջարկում ենք շահավետ պայմաններ առցանց գնումների դեպքում մեր կայքում։",
+      "how_it_works": {
+        "title": "Ինչպե՞ս է դա աշխատում։",
+        "steps": {
+          "register": "Գրանցվեք անձնական կաբինետում",
+          "first_purchase": " Առաջին առցանց գնման դեպքում ստացեք զեղչ 3%-ից մինչև 10%, կախված ապրանքից։",
+          "personal_discounts": "Գրանցումից հետո անձնական զեղչերը կցուցադրվեն ապրանքի նկարի վերին ձախ անկյունում։",
+          "free_delivery": "Եթե ձեր գնումների ընդհանուր արժեքը հասնում է 100,000 դրամի  կամ ավելի, ապա Երևան քաղաքի սահմաններում առաքումը կլինի անվճար։"
+        }
+      },
+      "notes": {
+        "discount_visibility": "Զեղչը տեսանելի կլինի միայն անձնական կաբինետում գրանցվելուց հետո։",
+        "accumulate_and_save": "Գնեք առցանց, կուտակեք գնումների քաշը և խնայեք առաքման վրա։"
+      },
+      "register_now": "Գրանցվեք հիմա և օգտվեք առավելություններից արդեն այսօր։"
     },
     "gift_card": {
       "title": "Domix-ի նվեր քարտ",
