--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -235,31 +235,22 @@
       "gift_cards": "Подарочные карты"
     },
     "info_regular_customer": {
-      "discount_system_title": "Накопительная система скидок Domix",
-      "delivery_excludes_unloading": "В услугу доставки (кроме мопеда) не входит разгрузка (выгрузка из автомобиля), подъем и транспортировка грузов являются отдельными услугами.",
-      "delivery_confirmation_required": "Доставка осуществляется после подтверждения готовности к получению товара. В день доставки, пожалуйста, свяжитесь с телефоном, указанным в заказе.",
-      "express_delivery_no_confirmation": "Если вы выбрали «Экспресс» доставку, машина прибудет по адресу даже без предварительного подтверждения заказа по телефону.",
-      "change_delivery_time": "Вы можете изменить время доставки или настроить заказ, связавшись с 012440440.",
-      "unloading_rules": "Если подъезд к месту разгрузки затруднен, то автомобиль остановится на максимально близком расстоянии от него, не нарушая ПДД и исключая возможность повреждения транспорта. На разгрузку автомобиля массой до 1,8 тонны отводится 30 минут, более 1,8 тонны – 60 минут.",
-      "payment_options": "Оплатить доставку можно заранее любым удобным способом (на сайте, по телефону), а также на месте наличными или банковской картой, до начала разгрузки.",
-      "customer_support": "Если у вас есть вопросы, связанные с качеством или количеством продукции, вы можете обратиться к представителю компании на месте или в Службу поддержки клиентов по телефону 012440440. Номер телефона также указан в товарном чеке.",
-
-      "purchase_amount": "Стоимость покупки",
-      "future_purchases": "Следующие покупки",
-      "delivery": "Доставка",
-      "loader_services": "Услуги грузчика",
-
-      "range_0_1m": "0 до 1 млн драм",
-      "range_1_3m": "от 1 до 3 млн драм",
-      "above_3m": "3 млн драм",
-
-      "discount_3": "3% скидка",
-      "discount_5": "5% скидка",
-      "discount_10": "10% скидка",
-
-      "delivery_free": "бесплатно",
-      "loader_free": "бесплатно",
-      "no_discount": "-"
+      "title": "Накопительная система скидок и бесплатная доставка",
+      "subtitle": "Мы ценим наших клиентов и предлагаем выгодные условия при онлайн-покупках через наш сайт!",
+      "how_it_works": {
+        "title": "Как это работает?",
+        "steps": {
+          "register": "Регистрируйтесь в личном кабинете.",
+          "first_purchase": "При первой онлайн-покупке получите скидку от 3% до 10% в зависимости от выбранного товара.",
+          "personal_discounts": "После регистрации персональные скидки на каждый товар будут отображаться в левом верхнем углу изображения товара.",
+          "free_delivery": "При накоплении 100 000 драмов покупок и более — доставка по городу Ереван становится бесплатной!"
+        }
+      },
+      "notes": {
+        "discount_visibility": "Скидку можно увидеть только после регистрации в личном кабинете.",
+        "accumulate_and_save": "Покупайте через сайт, накапливайте вес заказов и экономьте на доставке!"
+      },
+      "register_now": "Регистрируйтесь и получайте больше преимуществ уже сегодня!"
     },
     "gift_card": {
       "title": "Подарочная карта Domix",
